Use Double.valueOf(double)