@@ -95,23 +95,23 @@ public class DoubleConverterTestCase extends NumberConverterTestBase<Double> {
             new Integer(9),
             new Long(10),
             new Float(11.1),
-            new Double(12.2)
+            Double.valueOf(12.2)
         };
 
         final Double[] expected = {
-            new Double(Double.MIN_VALUE),
-            new Double(-17.2),
-            new Double(-1.1),
-            new Double(0.0),
-            new Double(1.1),
-            new Double(17.2),
-            new Double(Double.MAX_VALUE),
-            new Double(7),
-            new Double(8),
-            new Double(9),
-            new Double(10),
-            new Double(11.1),
-            new Double(12.2)
+            Double.valueOf(Double.MIN_VALUE),
+            Double.valueOf(-17.2),
+            Double.valueOf(-1.1),
+            Double.valueOf(0.0),
+            Double.valueOf(1.1),
+            Double.valueOf(17.2),
+            Double.valueOf(Double.MAX_VALUE),
+            Double.valueOf(7),
+            Double.valueOf(8),
+            Double.valueOf(9),
+            Double.valueOf(10),
+            Double.valueOf(11.1),
+            Double.valueOf(12.2)
         };
 
         for(int i=0;i<expected.length;i++) {
