@@ -95,7 +95,7 @@ public class LongConverterTestCase extends NumberConverterTestBase<Long> {
             new Integer(9),
             new Long(10),
             new Float(11.1),
-            new Double(12.2)
+            Double.valueOf(12.2)
         };
 
         final Long[] expected = {
